--- a/openscholar/themes/hwpi_vibrant/css/responsive.vibrant.css
+++ b/openscholar/themes/hwpi_vibrant/css/responsive.vibrant.css
@@ -110,7 +110,7 @@ ul.menu {
 .mobile-buttons a {
     font: bold 16px arial,sans-serif !important;
 }
-#layout_16_9_side .hero-copy {
+#layout_16_9_side .slide-copy {
     left: 50px!important;
     position: relative;
 
