--- a/openscholar/themes/os_basetheme/css/slideshow.css
+++ b/openscholar/themes/os_basetheme/css/slideshow.css
@@ -98,7 +98,7 @@ line-height:24px;
 }
 
 .rslides_tabs li {
-    background: #000;
+    background: #000 !important;
     float: left;
     margin: 0;
     list-style-image: none !important;
@@ -180,7 +180,7 @@ a.rslides_nav.prev {
      background: url('../images/transparent-black.png');
 }
 
-.lt-ie9  #layout_3_1_overlay .hero-copy {
+.lt-ie9  #layout_3_1_overlay .slide-copy {
      background: url('../images/transparent-black.png');
 }
 
@@ -197,7 +197,7 @@ a.rslides_nav.prev {
 }
 
  #layout_3_1_overlay .rslides_tabs li {
-    background: none repeat scroll 0 0 rgba(0, 0, 0, 0.8);
+    background: #000;
 }
 
 
@@ -279,7 +279,7 @@ line-height:24px;
     z-index: 2;
     width: 100%;
     padding:0;
-    min-height:170px;
+    min-height:150px;
 }	
 
 .two-sidebars #layout_16_9_overlay .slide-copy {
@@ -427,7 +427,7 @@ line-height:16px;
 .two-sidebars #layout_16_9_side .slide-copy h2 {
    font-size:17px;
 font-weight:bold;
-line-height:22px;
+line-height:20px;
     margin-bottom: 8px;
 }
 
